router/apollo-router/src/query_planner/snapshots/apollo_router__query_planner__bridge_query_planner__tests__empty_query_plan_usage_reporting.snap
---
source: apollo-router/src/query_planner/bridge_query_planner.rs
expression: usage_reporting
---
{
  "statsReportKey": "# -\n{__schema{queryType{name}}}",
  "referencedFieldsByType": {
    "Query": {
      "fieldNames": [
        "__schema"
      ],
      "isInterface": false
    },
    "__Schema": {
      "fieldNames": [
        "queryType"
      ],
      "isInterface": false
    },
    "__Type": {
      "fieldNames": [
        "name"
      ],
      "isInterface": false
    }
  }
}
