router/apollo-router/src/query_planner/snapshots/apollo_router__query_planner__bridge_query_planner__tests__impl-15.snap
---
source: apollo-router/src/query_planner/bridge_query_planner.rs
expression: "subselections_keys(r#\"query Q($d1:Boolean!, $d2:Boolean!) { me {\n            username\n            ... @defer(if: $d1, label: \"A\") { name {\n                first\n                ... @defer(if: $d2, label: \"B\") { last }\n            }}\n        }}\"#).await"
---
None 1 query{ me { username } }
None 2 query{ me { username ... on User{ name { first } } } }
None 3 query{ me { username } }
Some("A") 1 query{ me { name { first ... on Name{ last } } } }
Some("A") 3 query{ me { name { first } } }
Some("B") 2 query{ me { name { last } } }
Some("B") 3 query{ me { name { last } } }
