router/apollo-router/src/query_planner/snapshots/apollo_router__query_planner__bridge_query_planner__tests__impl-17.snap
---
source: apollo-router/src/query_planner/bridge_query_planner.rs
expression: "subselections_keys(r#\"query Q($d1:Boolean!) { me {\n            username\n            name {\n                ... @defer(label: \"A\") { first }\n                ... @defer(if: $d1, label: \"B\") { last }\n            }\n        }}\"#).await"
---
None 0 query{ me { username name { ... on Name{ last } } } }
None 1 query{ me { username } }
Some("A") 0 query{ me { name { first } } }
Some("A") 1 query{ me { name { first } } }
Some("B") 1 query{ me { name { last } } }
